<resources>
    <string name="app_name">Deliver Your Taste</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="back">Back</string>
    <string name="menu">Menu</string>
    <string name="cartbutton">CartButton</string>
    <string name="choose_theme">Choose Theme     </string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="orders">Orders</string>
    <string name="your_favourites">Your Favourites</string>
    <string name="view_recent_orders">View Recent Orders</string>
    <string name="payments">Payments</string>
    <string name="top_selling">Top Selling</string>
    <string name="settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="category_name">Category Name</string>
    <string name="price">price</string>
</resources>