<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="290dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/semi_transparent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginEnd="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BarMenuFragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@drawable/back"
        android:background="@drawable/buttons_background"
        android:drawableStart="@drawable/back"
        android:id="@+id/btnback"
        android:text="@string/back"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_theme"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_marginEnd="40dp"
            android:textStyle="bold"/>
    <ToggleButton
        android:id="@+id/tbtn"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textOn="@string/day"
        android:textOff="@string/night"
        android:background="@drawable/buttons_background"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginStart="10dp" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_recent_orders"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_marginEnd="4dp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/obtn"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/orders"
                android:background="@drawable/buttons_background"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_marginStart="20dp" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_favourites"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_marginEnd="40dp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/fbtn"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/fav"
            android:background="@drawable/buttons_background"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_marginStart="16dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_selling"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_marginEnd="40dp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/tsbtn"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/topselling"
            android:background="@drawable/buttons_background"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_marginStart="52dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payments"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_marginEnd="40dp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/paybtn"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/payments"
            android:background="@drawable/buttons_background"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_marginStart="62dp" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_marginEnd="40dp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/setbtn"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/settings"
                android:background="@drawable/buttons_background"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_marginStart="75dp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons_background"
        android:layout_marginStart="@dimen/margin_start_end_Buttons"
        android:layout_marginEnd="@dimen/margin_start_end_Buttons"
        android:layout_marginTop="30dp"
        android:text="@string/sign_out"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/btnsignout"
        android:padding="10dp"
        android:layout_gravity="bottom"/>
    </LinearLayout>
</LinearLayout>